[x86, aarch64] vmassert(_last_Java_pc == NULL, "already walkable"); fails with async profiler

XMLWordPrintable

    • svc
    • b21
    • x86, aarch64

        We hit the assertion sporadically on x86_64 when using the async profiler via "AsyncGetCallTrace". (aarch64 has the same implementation.)
        "frame::sender_for_entry_frame" calls "capture_last_Java_pc()" if _last_Java_pc == NULL. Within the latter function, we assert that it is still NULL. However, the async profiler may intercept the JavaThread and set the _last_Java_pc in the JavaFrameAnchor. So, the assertion fires when it sees that the work is already done.

              Assignee:
              Johannes Bechberger
              Reporter:
              Martin Doerr
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: