8282477: [x86, aarch64] vmassert(_last_Java_pc == NULL, "already walkable"); fails with async profiler

Reviewed-by: dholmes, mdoerr, dlong