src/hotspot/share/runtime/thread.cpp
@@ -1584,7 +1584,7 @@ void JavaThread::remove_monitor_chunk(MonitorChunk* chunk) {
 
 void JavaThread::handle_special_runtime_exit_condition() {
   if (is_obj_deopt_suspend()) {
-    frame_anchor()->make_walkable(this);
+    frame_anchor()->make_walkable();
     wait_for_object_deoptimization();
   }
   JFR_ONLY(SUSPEND_THREAD_CONDITIONAL(this);)
