src/hotspot/share/runtime/thread.hpp
@@ -1424,7 +1424,7 @@ class JavaThread: public Thread {
 
   // Accessing frames
   frame last_frame() {
-    _anchor.make_walkable(this);
+    _anchor.make_walkable();
     return pd_last_frame();
   }
   javaVFrame* last_java_vframe(RegisterMap* reg_map);
